# scsh

./: .gitignore  CLAUDE.md  README.md  download-isoapplet.sh  pyproject.toml  read-javacard.sh  scsh.toml  scshr
docs/: user-manual.md
examples/: apdu-cmds.txt  apdu-test.py  deploy-all.sh  profile.toml  scsh.toml  session-record.txt  test_apdus.json  test_apdus.txt
scsh/: __init__.py  __main__.py  apdu.py  cli.py  config.py  exceptions.py  gp_fallback.py  main.py  profile.py  reader.py  repl.py  session.py  shell.py
scsh/bridge/: __init__.py  gp_jar.py
scsh/commands/: __init__.py  _safety.py  _sw_guidance.py  apdu.py  apdu_history.py  apdu_subsys.py  card.py  config_cmd.py  deploy.py  gp.py  hardware.py  help_data.py  key_cmd.py  passthrough.py  session_cmd.py  system.py
scsh/formats/: __init__.py  apdu.py  sw.py  tlv.py
scsh/transport/: __init__.py  pcsc.py
tests/: test_apdu.py  test_commands_init.py  test_exceptions.py  test_formats_apdu.py  test_formats_tlv.py  test_gp.py  test_gp_jar.py  test_gp_operations.py  test_hardware.py  test_m5.py  test_main.py  test_reader.py  test_repl.py  test_shell.py  test_transport_pcsc.py  test_v040.py  test_v050.py  test_v060.py  test_v070.py
