[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scsh"
version = "0.1.0"
description = "Smart Card Shell – an interactive CLI for smart card development and testing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
pcsc = ["pyscard>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
scsh = "scsh.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scsh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
